# dds-analysis

./: README.rst  dds.yml  install.sh  pyproject.toml  readme  reqirements.txt  runner.py  setup.py
data/: chromSegment  clean  final_demo_data  genome  readme
data/in_tad/: Table1_common_boundaries_merged_sorted.bed  Table1_common_boundaries_merged_sorted_chr.bed  Table4_TAD_annotations_sorted.bed  Table4_TAD_annotations_sorted_chr.bed  add_chr.py  readme  run_gene_annotation.sh
dds_analysis/: dds_analysis.py
dds_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dds_analysis/script/: bpb3summary2bed_format.py  check_block_gene_inTAD.py  chromSegment_test4blocks.old  chromSegment_test4blocks.py  collect_gene_names4blocks.py  combine_dmr_deg2block.py  dTarget_methy_vs_express.py  dds_geneRanking.py  filterDEG4bpb3.py  find_enhancer_target_genes.py  go_pathway_analysis4out_blocks_gene.py  map_block2chromSegment.py  map_block2dmr.py  plot_mr_vs_exp.py  plot_tss_enhancer_mrs.py  preprocess.py
demo/demo1_fl_12samples/: blocks_summary_block_position.bed  demo1_fl_12samples.sh  flplot_mr_vsexp.sh  list_region_files.txt  readme  sample_name4replace.tsv
demo/demo2_hap1_cell/: find_DEG_in_tss_5dist_regions_hap1.py  job_dds  readme  run_hap1_cell.sh  run_hap1_cell_part3.sh  run_hap1_preprocess.sh  sample_name4replace.tsv
demo/demo3_rat/: job_dds  readme  run_rat.sh  run_rat_part4_test.sh  run_rat_preprocess.sh  sample_name4replace.tsv
demo/demo4_fl_mr/: blocks_summary_block_position_flank0bp2block.bed  dmr_dds_project  make_background_files.py  (+9 more)
(+133 files in other folders)
