# -*- coding: utf-8 -*-

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "dds_analysis"
version = "1.0"
description = "An integrated data analysis pipeline by considering both Differential Methylation Region (DMR) and Differentially  Expressed Gene (DEG) in SNP analysis. This package dependents on some of functinos from bpb3 package!"
authors = ["Junbai Wang <junbai@gmail.com>"]


[tool.poetry.dependencies]
    python = ">=3.8,<3.11"
    matplotlib = "3.5.3"
    numpy = "1.21.5"
    pandas="1.4.4"
    scikit_learn="1.2.2"
    scipy={version = "1.9.1", python = ">=3.8,<3.11"}
    setuptools="65.6.3"
    statsmodels="0.13.5"


[tool.poetry.scripts]
dds_analysis = "dds_analysis.dds_analysis:main"

entry-points = '''
    [console_scripts]
    dds_analysis = dds_analysis.dds_analysis:main
'''
[tool.flit.sdist]
include = [
    "dds_analysis",
     "dds_analysis.script",
     "dds_analysis.script.script_high",
    "README.md",
    "LICENSE"
]
exclude = ["final_demo_data",
"final_demo"]